--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,23 @@
 		<artifactId>commons-fileupload</artifactId>
 		<version>1.3</version>
 	</dependency>
+		
+	<dependency>
+		<groupId>commons-email</groupId>
+		<artifactId>commons-email</artifactId>
+		<version>1.3.2</version>
+	</dependency>
 	
 	<dependency>
 		<groupId>jstl</groupId>
 		<artifactId>jstl</artifactId>
 		<version>1.2</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>javaxmail</groupId>
+		<artifactId>javaxmail</artifactId>
+		<version>1.0</version>
 	</dependency>
 	
 	<dependency>
