--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,18 @@
 		<artifactId>commons-email</artifactId>
 		<version>1.3.2</version>
 	</dependency>
+
+	<dependency>
+		<groupId>dom4j</groupId>
+		<artifactId>dom4j</artifactId>
+		<version>1.6.1</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>xmlpull</groupId>
+		<artifactId>xmlpull</artifactId>
+		<version>1.1.3.1</version>
+	</dependency>
 	
 	<dependency>
 		<groupId>jstl</groupId>
@@ -56,6 +68,7 @@
 		<artifactId>javaxmail</artifactId>
 		<version>1.0</version>
 	</dependency>
+	
 	
 	<dependency>
     	<groupId>br.com.checker.emag</groupId>
