--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 	</dependency>
 
 	<dependency>
-		<groupId>dom4j</groupId>
+		<groupId>org</groupId>
 		<artifactId>dom4j</artifactId>
 		<version>1.6.1</version>
 	</dependency>
