--- a/pom.xml
+++ b/pom.xml
@@ -40,17 +40,17 @@
 	</dependency>
 		
 	<dependency>
-		<groupId>commons-email</groupId>
+		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-email</artifactId>
 		<version>1.3.2</version>
 	</dependency>
-
+    
 	<dependency>
-		<groupId>org</groupId>
+		<groupId>dom4j</groupId>
 		<artifactId>dom4j</artifactId>
 		<version>1.6.1</version>
 	</dependency>
-	
+    
 	<dependency>
 		<groupId>xmlpull</groupId>
 		<artifactId>xmlpull</artifactId>
@@ -64,10 +64,11 @@
 	</dependency>
 	
 	<dependency>
-		<groupId>javaxmail</groupId>
-		<artifactId>javaxmail</artifactId>
-		<version>1.0</version>
+		<groupId>javax.mail</groupId>
+		<artifactId>mail</artifactId>
+		<version>1.4</version>
 	</dependency>
+            
 	
 	
 	<dependency>
