--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 		<artifactId>commons-email</artifactId>
 		<version>1.3.2</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>2.5</version>
+	</dependency>
         
 	<dependency>
 		<groupId>dom4j</groupId>
