--- a/pom.xml
+++ b/pom.xml
@@ -80,20 +80,25 @@
     	<artifactId>emag-checker</artifactId>
     	<version>1.0</version>
     </dependency>
- 
- 
+    
+    <dependency> 
+		<groupId>org.projectlombok</groupId> 
+		<artifactId>lombok</artifactId> 
+		<version>0.12.0</version> 
+		<scope>provided</scope> 
+	</dependency>
     
     <dependency>
-	<groupId>net.sf.jasperreports</groupId>
-	<artifactId>jasperreports</artifactId>
-	<version>5.0.1</version>
-  </dependency>
+		<groupId>net.sf.jasperreports</groupId>
+		<artifactId>jasperreports</artifactId>
+		<version>5.0.1</version>
+  	</dependency>
  
-<dependency>
-	<groupId>org.apache.poi</groupId>
-	<artifactId>poi</artifactId>
-	<version>3.7</version>
-</dependency>
+	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi</artifactId>
+		<version>3.7</version>
+	</dependency>
             
             
  <dependency>
