Resolução de correções de recomendações.
git-svn-id: https://svn.bento.ifrs.edu.br/default/ASES/ASES%20-%20Web/ASES%20-%20Web/Fontes/avaliador-web@9872 c2178572-b5ca-4887-91d2-9e3a90c7d55b

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -2,134 +2,132 @@
 #FORMATO DA CHAVE = X.Y --- ONDE X â€¦ O Nâ„MERO DA RN E Y O Nâ„MERO DO CRITERIO
 
 
-1.1=NÃ£o foram respeitados os PadrÃµes Web
-2.1=Elementos utilizados de forma nÃ£o semâ€šntica
-3.1=Os nÃŒveis de tÃŒtulo nâ€o foram utilizados
-3.2=A hierarquia dos nÃŒveis de tÃŒtulo estÂ· incorreta 
-3.3=TÃŒtulos utilizados para elementos que nâ€o sâ€o tÃŒtulos reais no conteË™do
-3.4=Foi utilizado somente o nÃŒvel h1
-3.5=Foram utilizados nÃŒveis de tÃŒtulo, mas o h1 nâ€o Ãˆ o tÃŒtulo principal da pÂ·gina
-4.1=O bloco de conteË™do nâ€o estÂ· antes do bloco de menu no HTML
-4.2=Blocos dispostos de forma incorreta
-4.3=Uso incorreto do tabindex
-4.4=HÂ· elementos que poderiam estar melhor dispostos na pÂ·gina
-5.1=O foco do teclado fica travado/bloqueado em algum elemento
-5.2=HÂ· funcionalidade que sÃ› funciona pelo mouse
-5.3=HÂ· janela modal inaccessÃŒvel
-5.4=HÂ· menu com subitens que nâ€o sâ€o acessados pelo teclado 
-5.5=HÂ· menu com subitens que podem ser acessados pelo teclado, mas sua existÃncia nâ€o fica clara para o usuÂ·rio de leitor de tela
-6.1=HÂ· conteË™do extenso, mas nâ€o foram disponibilizadas â€šncoras em forma de sumÂ·rio
-6.2=Nâ€o existem atalhos
-6.3=HÂ· atalhos, mas nâ€o funcionam corretamente
-6.4=HÂ· atalhos, mas eles nâ€o seguem o padrâ€o do eMAG
-6.5=Nâ€o existem links indicadores de inÃŒcio e fim dos blocos principais
-6.6=HÂ· links indicadores, mas estâ€o ocultos de forma que o leitor de tela nâ€o os acessa
-7.1=Foram utilizadas tabelas para fins de layout 
-7.2=HÂ· formulÂ·rio construÃŒdo dentro de tabela 
-8.1=HÂ· links adjacentes sem nenhum tipo de separaÃâ€o Ã± muito alta
-8.2=HÂ· links adjacentes separados por sÃŒmbolos 
-9.1=HÂ· link que abre nova pÂ·gina ou aba sem informar ao usuÂ·rio 
-9.2=HÂ· mudanÃa automÂ·tica no controle do foco do teclado Ã± muito alta
-9.3=HÂ· link que remete a um site externo sem avisar no texto do mesmo 
-10.1=HÂ· script, flash ou conteË™do dinâ€šmico inacessÃŒvel
-10.2=Ha script, flash ou conteË™do dinâ€šmico parcialmente acessÃŒvel
-11.1=PÂ·gina que se atualiza automaticamente sem aviso prÃˆvio
-11.2=PÂ·gina que se atualiza automaticamente, mas avisa o usuÂ·rio antes de fazÃ-lo
-12.1=HÂ· redimensionamento automÂ·tico
-13.1=HÂ· limite de tempo que nâ€o pode ser modificado Ã± muito alta
-13.2=HÂ· limite de tempo que pode ser modificado, mas essa funcionalidade nâ€o Ãˆ acessÃŒvel Ã± alta
-14.1=HÂ· situaÃâ€o com intermitÃncia de tela
-15.1=HÂ· banner ou outro elemento que se move, sem opÃâ€o para pausar e reiniciar
-16.1=Nâ€o hÂ· identificaÃâ€o do idioma principal da pÂ·gina 
-16.2=HÂ· identificaÃâ€o do idioma principal da pÂ·gina, mas o mesmo estÂ· incorreto
-17.1=Nâ€o hÂ· tÃŒtulo para a pÂ·gina
-17.2=HÂ· tÃŒtulo, mas ele nâ€o descreve corretamente a pÂ·gina
-17.3=O tÃŒtulo descreve o site, mas nâ€o as pÂ·ginas internas
-17.4=O tÃŒtulo descreve a pÂ·gina atual, mas nâ€o o site
-17.5=O tÃŒtulo descreve a pÂ·gina, mas pode ser melhorado
-18.1=Nâ€o hÂ· breadcrumb
-18.2=HÂ· breadcrumb, mas os itens nâ€o estâ€o em forma de link
-18.3=HÂ· breadcrumb, mas o mesmo exibe links de pÂ·ginas nâ€o percorridas
-18.4=HÂ· breadcrumb, mas nâ€o hÂ· informaÃâ€o que o identifique, como Ã¬vocÃ estÂ· emÃ®
-18.5=HÂ· breadcrumb, mas o tÃŒtulo da pÂ·gina em navegaÃâ€o nâ€o Ãˆ informado
-18.6=HÂ·breadcrumb na pÂ·gina inicial 
-19.1=Link com descriÃâ€o que nâ€o corresponde ao seu destino 
-19.2=Link com descriÃâ€o no formato de URL 
-19.3=Links vazios (sem descriÃâ€o/ sem title/ sem conter imagem ou qualquer outra tag)
-19.4=Link com descriÃâ€o somente no Ã¬titleÃ® 
-19.5=Links que sâ€o imagem sem descriÃâ€o Ã± muito alta
-19.6=Links do tipo Ã¬clique aquiÃ®, Ã¬leia maisÃ®, Ã¬veja aquiÃ®, entre outros
-19.7=Links com descriÃâ€o insuficiente ou confusa 
-19.8=Links para download de documentos que nâ€o possuem tamanho e extensâ€o na descriÃâ€o do link 
-19.9=Link que expande um conteË™do, mas essa aÃâ€o nâ€o fica clara ao usuÂ·rio de leitor de tela
-19.10=Links com descriÃÄ±es diferentes que remetem ao mesmo local 
-19.11=Links com a mesma descriÃâ€o que remetem a locais diferentes 
-19.12=Links que sâ€o lidos duas ou mais vezes 
-19.13=Links com a mesma descriÃâ€o em diferentes locais da mesma pÂ·gina 
-19.14=Links com descriÃâ€o muito longa 
-19.15=Links que remetem a pÂ·ginas com erro ou pÂ·ginas em construÃâ€o 
-20.1=Imagens com conteË™do sem descriÃâ€o 
-20.2=Imagens com descriÃâ€o inadequada (nome do arquivo, Ã¬altÃ®, Ã¬descriÃâ€oÃ®, Ã¬imagemÃ®, entre outros)
-20.3=Imagens decorativas que nâ€o sâ€o ignoradas pelo leitor de tela 
-20.4=Imagens diferentes com a mesma descriÃâ€o 
-20.5=Imagens com descriÃâ€o confusa 
-20.6=Imagem com dupla descriÃâ€o, pois utiliza atributo title com mesmo valor da descriÃâ€o
-20.7=Imagens com descriÃÄ±es muito longas no alt
-21.1=Mapa de imagem sem descriÃâ€o ou alternativa
-21.2=Mapa de imagem com descriÃÄ±es inadequadas
-22.1=Documentos que nâ€o oferecem alternativas em um dos formatos sugeridos pelo e-MAG
-23.1=Tabelas complexas sem tÃŒtulo e resumo 
-24.1=Tabelas sem cÃˆlulas associadas
-25.1=Nâ€o Ãˆ possÃŒvel compreender a informaÃâ€o 
-25.2=Erros ortogrÂ·ficos 
-25.3=InformaÃÄ±es confusas 
-25.4=ParÂ·grafos muito extensos 
-26.1=Siglas sem explicaÃâ€o 
-26.2=Palavras em outro idioma sem traduÃâ€o 
-27.1=ConteË™do em outro idioma sem informaÃâ€o no cÃ›digo
-28.1=Contraste ruim (relaÃâ€o de contraste < 3:1)
-28.2=Contraste abaixo do recomendado (entre 3:1 e 4,5:1)
-28.3=Nâ€o oferece opÃâ€o de alto contraste
-28.4=Alto contraste nâ€o Ãˆ um contraste de 7:1 ou superior
-28.5=Contraste abaixo do recomendado somente em algumas partes da pÂ·gina
-29.1=Cor ou outras caracterÃŒsticas utilizadas como Ë™nicas forma de transmitir informaÃâ€o
+1.1=Não foram respeitados os Padrões Web HTML
+1.2=Não foram respeitados os Padrões Web CSS
+1.3=Presença de CSS(s) in-line
+1.4=Presença de CSS(s) interno
+1.5=Presença de javascript(s) in-line
+1.6=Presença de javascript(s) interno
+2.1=Presença de tags HTML sem atributo e conteúdo de texto
+3.1=Os níveis de título não foram utilizados
+3.2=A hierarquia dos níveis de título está incorreta
+3.3=Foi utilizado somente o nível h1
+3.4=Presença de mais de 1 cabeçalho <h1>
+3.5=Foram utilizados níveis de título, mas o h1 não o título principal da página
+4.1=O bloco de conteúdo não está antes do bloco de menu no HTM
+4.2=Presença do atributo tabindex
+4.3=Presença de número do tabindex menor do que 0 e maior 32767
+4.4=há elementos que poderiam estar melhor dispostos na página
+5.1=Não foram encontrados âncoras que permitam saltar pelas diferentes seções da página
+5.2=Foram encontrados âncoras que permitam saltar pelas diferentes seções da página, porém  algumas não possuem um destino correspondente
+5.3=Não existem atalhos
+5.4=O primeiro link é uma âncora para conteúdo da página 
+5.5=Presença de atributo accesskey com conteúdo repetido
+6.1=Foram utilizadas tabelas
+6.2=Há formulário construído dentro de tabela
+6.3=Há formulário construído dentro de tabela
+6.4=Há· atalhos, mas eles não seguem o padrão do eMAG
+6.5=Não existem links indicadores de início e fim dos blocos principais
+6.6=Há· links indicadores, mas estão ocultos de forma que o leitor de tela não os acessa
+7.1=Há links adjacentes sem nenhum tipo de separação ou separação por espaços em branco
+8.1=Ausência de divisão de áreas, quando do Uso de HTML 5 
+8.2=Há links adjacentes separados por símbolos 
+9.1=Há link que abre nova página ou aba sem informar ao usuário 
+9.2=Há mudança automática no controle do foco do teclado é muito alta
+9.3=Há link que remete a um site externo sem avisar no texto do mesmo 
+10.1=Há funcionalidade que só funciona pelo mouse
+10.2=Presença de evento dblclick no elemento HTML
+10.3=Presença de eventos associados a elementos não interativos
+11.1=Presença do elemento SCRIPT sem o elemento NOSCRIPT
+11.2=Presença de elemento OBJECT sem o conteúdo alternativo
+11.3=Presença de elemento EMBED na página HTML
+11.4=Presença de elemento APPLET na página HTML
+12.1=Página que se atualiza automaticamente
+13.1=Há redirecionamento automático
+13.2=Há limite de tempo que pode ser modificado, mas essa funcionalidade não é acessível
+14.1=Há situação com intermitência de tela
+15.1=Presença do elemento BLINK
+15.2=Presença do elemento MARQUEE
+15.3=Presença do elemento IMG com arquivo de extensão gif e intermitência de tela
+16.1=-- 
+17.1=Não há identificação do idioma principal da página
+17.2=Presença do elemento HTML, atributo XMLNS, atributo XML:LANG e ausência do atributo LANG
+17.3=O título descreve o site, mas não as páginas internas
+17.4=O título descreve a página atual, mas não o site
+17.5=O título descreve a página, mas pode ser melhorado
+18.1=Presença de atributo lang nos elementos da página, além da tag <HTML>
+18.2=Há breadcrumb, mas os itens não estão em forma de link
+18.3=Há breadcrumb, mas o mesmo exibe links de páginas não percorridas
+18.4=Há breadcrumb, mas não há informação que o identifique, como Ã¬vocÃ está emÃ®
+18.5=Há breadcrumb, mas o título da página em navegação não foi informado
+18.6=Há breadcrumb na página inicial 
+19.1=Não há título para a página, ou está em branco
+20.1=-- 
+21.1=Link com descrição no formato de URL
+21.2=Links vazios
+21.3=Link com descrição somente no title
+21.4=Links que são imagem sem descrição
+21.5=Links do tipo clique aqui, leia mais, veja aqui, entre outros:
+21.6=Links com descrições diferentes que remetem ao mesmo local
+21.7=Links com a mesma descrição que remetem a locais diferentes
+21.8=Links que são lidos duas ou mais vezes
+21.9=Links com descrição muito longa
+21.10=Links que remetem a páginas indisponíveis/inexistentes (links quebrados)
+22.1=Imagens sem a declaração do atributo alt
+22.2=Imagens com conteúdo sem descrição
+22.3=Imagens com descrição igual ao nome do arquivo
+22.4=Imagens com descrições comuns
+22.5=Imagens diferentes com a mesma descrição
+22.6=Imagem com dupla descrição, pois utiliza atributo title com mesmo valor da descrição
+23.1=Mapa de imagem sem descrição ou alternativa em texto
+24.1=Tabelas sem células associadas
+25.1=Tabelas sem título e resumo
+25.2=Erros ortográficos 
+25.3=Informações confusas 
+26.1=Tabelas sem células associadas
+27.1=Parágrafos muito extensos
+27.2=Presença de parágrafos justificados
+27.3=Presença de textos justificados através de folhas de estilo
+28.1=Siglas marcadas e sem explicação
+29.1=Foram localizados combinações de cor cuja relação de contraste é inferior a 4,5:1
 30.1=Quando ocorre o redimensionamento, ocorre perda de funcionalidade
-30.2=O sÃŒtio nâ€o dispÄ±e de nenhum botâ€o que possibilite, de forma nativa, o redimensionamento de texto
-30.3=Quando ocorre o redimensionamento, apenas uma parte dos elementos Ãˆ ampliada
-30.4=Quando ocorre o redimensionamento, hÂ· inserÃâ€o de barras de rolagem
-30.5=O recurso de redimensionamento de texto nâ€o permite que o texto chegue a ser 200% do tamanho original
-31.1=Nâ€o hÂ· divisâ€o das Â·reas de informaÃâ€o e nâ€o Ãˆ possÃŒvel perceber essa divisâ€o utilizando o leitor de tela
-31.2=Nâ€o hÂ· divisâ€o das Â·reas de informaÃâ€o, mas pode-se ter uma ideia das Â·reas presentes
-32.1=O foco nâ€o Ãˆ visualmente evidente
-32.2=O foco Ãˆ visualmente evidente, mas o contraste Ãˆ muito ruim
-32.3=O foco Ãˆ visualmente evidente em parte dos elementos
-33.1=O vÃŒdeo nâ€o tem transcriÃâ€o textual
-33.2=O vÃŒdeo nâ€o possui legenda
-34.1=Â¡udio sem alternativa textual
-34.2=Uso de caracteres imprÃ›prios
-35.1=Nâ€o existe audiodescriÃâ€o e hÂ· necessidade de haver
-36.1=Â¡udio que toca automaticamente em uma pÂ·gina sem opÃÄ±es para pausar
-37.1=AnimaÃâ€o que Ãˆ executada automaticamente sem opÃÄ±es para pausar
-38.1=Botâ€o sem descriÃâ€o
-38.2=Botâ€o com descriÃâ€o inadequada
-38.3=Botâ€o com descriÃâ€o insuficiente ou descriÃâ€o pouco objetiva (pode ser melhorada)
+30.2=O sítio não dispÄ±e de nenhum botão que possibilite, de forma nativa, o redimensionamento de texto
+30.3=Quando ocorre o redimensionamento, apenas uma parte dos elementos é ampliada
+30.4=Quando ocorre o redimensionamento, há inserção de barras de rolagem
+30.5=O recurso de redimensionamento de texto não permite que o texto chegue a ser 200% do tamanho original
+31.1=não há divisão das áreas de informação e não é possível perceber essa divisão utilizando o leitor de tela
+31.2=não há divisão das áreas de informação, mas pode-se ter uma ideia das áreas presentes
+32.1=Presença de destaque do foco do elemento ativo
+32.2=O foco é visualmente evidente, mas o contraste é muito ruim
+32.3=O foco é visualmente evidente em parte dos elementos
+33.1=Não fornece alternativa para vídeo
+33.2=O vídeo não possui legenda
+34.2=Uso de caracteres impróprios
+34.1=Fornecer alternativa para áudio(Â¡udio sem alternativa textual)
+35.1=não existe audiodescrição e há necessidade de haver
+36.1=Fornecer controle de áudio para som(Â¡udio que toca automaticamente em uma página sem opções para pausar)
+37.1=Animação que é executada automaticamente sem opções para pausar
+38.1=Botão sem descrição
+38.2=botão com descrição inadequada
+38.3=botão com descrição insuficiente ou descrição pouco objetiva (pode ser melhorada)
 39.1=Campo sem label associado
-39.2=Campo etiquetado, mas a descriÃâ€o do label nâ€o estÂ· apropriada
-40.1=FormulÂ·rio com ordem de navegaÃâ€o incorreta
-41.1=Caixa de seleÃâ€o cuja opÃâ€o Ãˆ ativada ao sair do campo com o Tab
-41.2=Outros campos de formulÂ·rio que remetem automaticamente
-41.3=Botâ€o que remete automaticamente
-42.1=Campo obrigatÃ›rio informado somente atravÃˆs de cor
-42.2=Campo obrigatÃ›rio que nâ€o Ãˆ informado
-42.3=Campos que exigem uma entrada especÃŒfica, mas nâ€o informam como a mesma deve ser
-42.4=Campo obrigatÃ›rio Ãˆ informado, mas nâ€o para o leitor de tela
-42.5=Campo obrigatÃ›rio informado atravÃˆs de sÃŒmbolos (*)
-42.6=Mensagem de preenchimento opcional que nâ€o estÂ· associada ao campo
-43.1=Mensagem de erro inacessÃŒvel
-43.2=Nâ€o hÂ· mensagem de erro
-43.3=ApÃ›s mensagem de erro, o foco nâ€o Ãˆ remetido para o inÃŒcio do formulÂ·rio ou para primeiro campo com erro
+39.2=Campo etiquetado, mas a descrição do label não está apropriada
+40.1=Presença do elemento FORM  e atributo tabindex
+41.1=Presença do elemento FORM  e nos seus elementos a existência do atributo ONCHANGE, ONBLUR,ONFOCUS, ONFORMCHANGE,  ONFORMINPUT , ONINPUT , ONINVALID , ONRESET , ONSELECT, ONSUBMIT,  ONKEYDOWN , ONKEYPRESS, ONKEYUP, ONCLICK
+41.2=Presença do elemento FORM  e nos seus elementos a existência do atributo ONDBLCLICK, ONDRAG, ONDRAGEND, ONDRAGENTER, ONDRAGLEAVE, ONDRAGOVER, ONDRAGSTART, ONDROP, ONMOUSEDOWN, ONMOUSEMOVE, ONMOUSEOUT, ONMOUSEOVER, ONMOUSEUP, ONMOUSEWHEEL, ONSCROLL
+41.3=botão que remete automaticamente
+42.1=Campo obrigatório informado somente através de cor
+42.2=Campo obrigatório que não é informado
+42.3=Campos que exigem uma entrada específica, mas não informam como a mesma deve ser
+42.4=Campo obrigatório é informado, mas não para o leitor de tela
+42.5=Campo obrigatório informado através de símbolos (*)
+42.6=Mensagem de preenchimento opcional que não está associada ao campo
+43.1=Mensagem de erro inacessível
+43.2=não há mensagem de erro
+43.3=Após mensagem de erro, o foco não é remetido para o início do formulário ou para primeiro campo com erro
 43.4=Mensagem de erro em Alert
 43.5=Mensagem de erro confusa
-44.1=Sem agrupamento de campos onde hÂ· necessidade de haver
-44.2=Campos agrupados de forma incorreta
+44.1=Existência de formulário e inexistência de agrupamento de campos
+44.2=Uso de campo de seleção sem agrupamento
+4.2=Campos agrupados de forma incorreta
 45.1=CAPTCHA sem alternativa em texto
