--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -103,7 +103,7 @@
 33.1=Não fornece alternativa para vídeo
 33.2=O vídeo não possui legenda
 34.2=Uso de caracteres impróprios
-34.1=Fornecer alternativa para áudio(Â¡udio sem alternativa textual)
+34.1=Fornecer alternativa para áudio(áudio sem alternativa textual)
 35.1=não existe audiodescrição e há necessidade de haver
 36.1=Fornecer controle de áudio para som(Â¡udio que toca automaticamente em uma página sem opções para pausar)
 37.1=Animação que é executada automaticamente sem opções para pausar
