--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
 	<artifactId>commons-logging</artifactId>
 	<version>1.1.1</version>
 </dependency>
+
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-validator</artifactId>
+    <version>4.2.0.Final</version>
+</dependency>
     
   </dependencies>
   <build>
