Resolução de problemas(Pente Fino de Tárcio).
git-svn-id: https://svn.bento.ifrs.edu.br/default/ASES/ASES%20-%20Web/ASES%20-%20Web/Fontes/avaliador-web@9953 c2178572-b5ca-4887-91d2-9e3a90c7d55b

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -106,7 +106,7 @@
 34.1=Fornecer alternativa para áudio(áudio sem alternativa textual)
 35.1=não existe audiodescrição e há necessidade de haver
 36.1=Fornecer controle de áudio para som(Â¡udio que toca automaticamente em uma página sem opções para pausar)
-37.1=Animação que é executada automaticamente sem opções para pausar
+37.1=Animação é executada automaticamente sem opções para pausar.
 38.1=Botão sem descrição
 38.2=botão com descrição inadequada
 38.3=botão com descrição insuficiente ou descrição pouco objetiva (pode ser melhorada)
