git-svn-id: https://svn.bento.ifrs.edu.br/default/ASES/ASES%20-%20Web/ASES%20-%20Web/Fontes/avaliador-web@10030 c2178572-b5ca-4887-91d2-9e3a90c7d55b

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -2,132 +2,132 @@
 #FORMATO DA CHAVE = X.Y --- ONDE X â€¦ O Nâ„MERO DA RN E Y O Nâ„MERO DO CRITERIO
 
 
-1.1=Não foram respeitados os Padrões Web HTML
-1.2=Não foram respeitados os Padrões Web CSS
-1.3=Presença de CSS(s) in-line
-1.4=Presença de CSS(s) interno
-1.5=Presença de javascript(s) in-line
-1.6=Presença de javascript(s) interno
-2.1=Presença de tags HTML sem atributo e conteúdo de texto
-3.1=Os níveis de título não foram utilizados
-3.2=A hierarquia dos níveis de título está incorreta
-3.3=Foi utilizado somente o nível h1
-3.4=Presença de mais de 1 cabeçalho <h1>
-3.5=Foram utilizados níveis de título, mas o h1 não o título principal da página
-4.1=O bloco de conteúdo não está antes do bloco de menu no HTM
-4.2=Presença do atributo tabindex
-4.3=Presença de número do tabindex menor do que 0 e maior 32767
-4.4=há elementos que poderiam estar melhor dispostos na página
-5.1=Não foram encontrados âncoras que permitam saltar pelas diferentes seções da página
-5.2=Foram encontrados âncoras que permitam saltar pelas diferentes seções da página, porém  algumas não possuem um destino correspondente
-5.3=Não existem atalhos
-5.4=O primeiro link é uma âncora para conteúdo da página 
-5.5=Presença de atributo accesskey com conteúdo repetido
-6.1=Foram utilizadas tabelas
-6.2=Há formulário construído dentro de tabela
-6.3=Há formulário construído dentro de tabela
-6.4=Há· atalhos, mas eles não seguem o padrão do eMAG
-6.5=Não existem links indicadores de início e fim dos blocos principais
-6.6=Há· links indicadores, mas estão ocultos de forma que o leitor de tela não os acessa
-7.1=Há links adjacentes sem nenhum tipo de separação ou separação por espaços em branco
-8.1=Ausência de divisão de áreas, quando do Uso de HTML 5 
-8.2=Há links adjacentes separados por símbolos 
-9.1=Há link que abre nova página ou aba sem informar ao usuário 
-9.2=Há mudança automática no controle do foco do teclado é muito alta
-9.3=Há link que remete a um site externo sem avisar no texto do mesmo 
-10.1=Há funcionalidade que só funciona pelo mouse
-10.2=Presença de evento dblclick no elemento HTML
-10.3=Presença de eventos associados a elementos não interativos
-11.1=Presença do elemento SCRIPT sem o elemento NOSCRIPT
-11.2=Presença de elemento OBJECT sem o conteúdo alternativo
-11.3=Presença de elemento EMBED na página HTML
-11.4=Presença de elemento APPLET na página HTML
-12.1=Página que se atualiza automaticamente
-13.1=Há redirecionamento automático
-13.2=Há limite de tempo que pode ser modificado, mas essa funcionalidade não é acessível
-14.1=Há situação com intermitência de tela
-15.1=Presença do elemento BLINK
-15.2=Presença do elemento MARQUEE
-15.3=Presença do elemento IMG com arquivo de extensão gif e intermitência de tela
-16.1=-- 
-17.1=Não há identificação do idioma principal da página
-17.2=Presença do elemento HTML, atributo XMLNS, atributo XML:LANG e ausência do atributo LANG
-17.3=O título descreve o site, mas não as páginas internas
-17.4=O título descreve a página atual, mas não o site
-17.5=O título descreve a página, mas pode ser melhorado
-18.1=Presença de atributo lang nos elementos da página, além da tag <HTML>
-18.2=Há breadcrumb, mas os itens não estão em forma de link
-18.3=Há breadcrumb, mas o mesmo exibe links de páginas não percorridas
-18.4=Há breadcrumb, mas não há informação que o identifique, como Ã¬vocÃ está emÃ®
-18.5=Há breadcrumb, mas o título da página em navegação não foi informado
-18.6=Há breadcrumb na página inicial 
-19.1=Não há título para a página, ou está em branco
-20.1=-- 
-21.1=Link com descrição no formato de URL
-21.2=Links vazios
-21.3=Link com descrição somente no title
-21.4=Links que são imagem sem descrição
-21.5=Links do tipo clique aqui, leia mais, veja aqui, entre outros:
-21.6=Links com descrições diferentes que remetem ao mesmo local
-21.7=Links com a mesma descrição que remetem a locais diferentes
-21.8=Links que são lidos duas ou mais vezes
-21.9=Links com descrição muito longa
-21.10=Links que remetem a páginas indisponíveis/inexistentes (links quebrados)
-22.1=Imagens sem a declaração do atributo alt
-22.2=Imagens com conteúdo sem descrição
-22.3=Imagens com descrição igual ao nome do arquivo
-22.4=Imagens com descrições comuns
-22.5=Imagens diferentes com a mesma descrição
-22.6=Imagem com dupla descrição, pois utiliza atributo title com mesmo valor da descrição
-23.1=Mapa de imagem sem descrição ou alternativa em texto
-24.1=Tabelas sem células associadas
-25.1=Tabelas sem título e resumo
-25.2=Erros ortográficos 
-25.3=Informações confusas 
-26.1=Tabelas sem células associadas
-27.1=Parágrafos muito extensos
-27.2=Presença de parágrafos justificados
-27.3=Presença de textos justificados através de folhas de estilo
-28.1=Siglas marcadas e sem explicação
-29.1=Foram localizados combinações de cor cuja relação de contraste é inferior a 4,5:1
-30.1=Quando ocorre o redimensionamento, ocorre perda de funcionalidade
-30.2=O sítio não dispÄ±e de nenhum botão que possibilite, de forma nativa, o redimensionamento de texto
-30.3=Quando ocorre o redimensionamento, apenas uma parte dos elementos é ampliada
-30.4=Quando ocorre o redimensionamento, há inserção de barras de rolagem
-30.5=O recurso de redimensionamento de texto não permite que o texto chegue a ser 200% do tamanho original
-31.1=não há divisão das áreas de informação e não é possível perceber essa divisão utilizando o leitor de tela
-31.2=não há divisão das áreas de informação, mas pode-se ter uma ideia das áreas presentes
-32.1=Presença de destaque do foco do elemento ativo
-32.2=O foco é visualmente evidente, mas o contraste é muito ruim
-32.3=O foco é visualmente evidente em parte dos elementos
-33.1=Não fornece alternativa para vídeo
-33.2=O vídeo não possui legenda
-34.2=Uso de caracteres impróprios
-34.1=Fornecer alternativa para áudio(áudio sem alternativa textual)
-35.1=não existe audiodescrição e há necessidade de haver
-36.1=Fornecer controle de áudio para som(Â¡udio que toca automaticamente em uma página sem opções para pausar)
-37.1=Animação é executada automaticamente sem opções para pausar.
-38.1=Botão sem descrição
-38.2=botão com descrição inadequada
-38.3=botão com descrição insuficiente ou descrição pouco objetiva (pode ser melhorada)
-39.1=Campo sem label associado
-39.2=Campo etiquetado, mas a descrição do label não está apropriada
-40.1=Presença do elemento FORM  e atributo tabindex
-41.1=Presença do elemento FORM  e nos seus elementos a existência do atributo ONCHANGE, ONBLUR,ONFOCUS, ONFORMCHANGE,  ONFORMINPUT , ONINPUT , ONINVALID , ONRESET , ONSELECT, ONSUBMIT,  ONKEYDOWN , ONKEYPRESS, ONKEYUP, ONCLICK
-41.2=Presença do elemento FORM  e nos seus elementos a existência do atributo ONDBLCLICK, ONDRAG, ONDRAGEND, ONDRAGENTER, ONDRAGLEAVE, ONDRAGOVER, ONDRAGSTART, ONDROP, ONMOUSEDOWN, ONMOUSEMOVE, ONMOUSEOUT, ONMOUSEOVER, ONMOUSEUP, ONMOUSEWHEEL, ONSCROLL
-41.3=botão que remete automaticamente
-42.1=Campo obrigatório informado somente através de cor
-42.2=Campo obrigatório que não é informado
-42.3=Campos que exigem uma entrada específica, mas não informam como a mesma deve ser
-42.4=Campo obrigatório é informado, mas não para o leitor de tela
-42.5=Campo obrigatório informado através de símbolos (*)
-42.6=Mensagem de preenchimento opcional que não está associada ao campo
-43.1=Mensagem de erro inacessível
-43.2=não há mensagem de erro
-43.3=Após mensagem de erro, o foco não é remetido para o início do formulário ou para primeiro campo com erro
-43.4=Mensagem de erro em Alert
-43.5=Mensagem de erro confusa
-44.1=Existência de formulário e inexistência de agrupamento de campos
-44.2=Uso de campo de seleção sem agrupamento
+1.1.1=Não foram respeitados os Padrões Web HTML
+1.1..2=Não foram respeitados os Padrões Web CSS
+1.1..3=Presença de CSS(s) in-line
+1.1..4=Presença de CSS(s) interno
+1.1..5=Presença de javascript(s) in-line
+1.1..6=Presença de javascript(s) interno
+1.2.1=Presença de tags HTML sem atributo e conteúdo de texto
+1.3.1=Os níveis de título não foram utilizados
+1.3.2=A hierarquia dos níveis de título está incorreta
+1.3.3=Foi utilizado somente o nível h1
+1.3.4=Presença de mais de 1 cabeçalho <h1>
+1.3.5=Foram utilizados níveis de título, mas o h1 não o título principal da página
+1.4.1=O bloco de conteúdo não está antes do bloco de menu no HTM
+1.4.2=Presença do atributo tabindex
+1.4.3=Presença de número do tabindex menor do que 0 e maior 32767
+1.4.4=há elementos que poderiam estar melhor dispostos na página
+1.5.1=Não foram encontrados âncoras que permitam saltar pelas diferentes seções da página
+1.5.2=Foram encontrados âncoras que permitam saltar pelas diferentes seções da página, porém  algumas não possuem um destino correspondente
+1.5.3=Não existem atalhos
+1.5.4=O primeiro link é uma âncora para conteúdo da página 
+1.5.5=Presença de atributo accesskey com conteúdo repetido
+1.6.1=Foram utilizadas tabelas
+1.6.2=Há formulário construído dentro de tabela
+1.6.3=Há formulário construído dentro de tabela
+1.6.4=Há· atalhos, mas eles não seguem o padrão do eMAG
+1.6.5=Não existem links indicadores de início e fim dos blocos principais
+1.6.6=Há· links indicadores, mas estão ocultos de forma que o leitor de tela não os acessa
+1.7.1=Há links adjacentes sem nenhum tipo de separação ou separação por espaços em branco
+1.8.1=Ausência de divisão de áreas, quando do Uso de HTML 5 
+1.8.2=Há links adjacentes separados por símbolos 
+1.9.1=Há link que abre nova página ou aba sem informar ao usuário 
+1.9.2=Há mudança automática no controle do foco do teclado é muito alta
+1.9.3=Há link que remete a um site externo sem avisar no texto do mesmo 
+2.1.1=Há funcionalidade que só funciona pelo mouse
+2.1.2=Presença de evento dblclick no elemento HTML
+2.1.3=Presença de eventos associados a elementos não interativos
+2.2.1=Presença do elemento SCRIPT sem o elemento NOSCRIPT
+2.2.2=Presença de elemento OBJECT sem o conteúdo alternativo
+2.2.3=Presença de elemento EMBED na página HTML
+2.2.4=Presença de elemento APPLET na página HTML
+2.3.1=Página que se atualiza automaticamente
+2.4.1=Há redirecionamento automático
+2.4.2=Há limite de tempo que pode ser modificado, mas essa funcionalidade não é acessível
+2.5.1=Há situação com intermitência de tela
+2.6.1=Presença do elemento BLINK
+2.6.2=Presença do elemento MARQUEE
+2.6.3=Presença do elemento IMG com arquivo de extensão gif e intermitência de tela
+2.7.1=-- 
+3.1.1=Não há identificação do idioma principal da página
+3.1.2=Presença do elemento HTML, atributo XMLNS, atributo XML:LANG e ausência do atributo LANG
+3.1.3=O título descreve o site, mas não as páginas internas
+3.1.4=O título descreve a página atual, mas não o site
+3.1.5=O título descreve a página, mas pode ser melhorado
+3.2.1=Presença de atributo lang nos elementos da página, além da tag <HTML>
+3.2.2=Há breadcrumb, mas os itens não estão em forma de link
+3.2.3=Há breadcrumb, mas o mesmo exibe links de páginas não percorridas
+3.2.4=Há breadcrumb, mas não há informação que o identifique, como Ã¬vocÃ está emÃ®
+3.2.5=Há breadcrumb, mas o título da página em navegação não foi informado
+3.2.6=Há breadcrumb na página inicial 
+3.3.1=Não há título para a página, ou está em branco
+3.4.1=-- 
+3.5.1=Link com descrição no formato de URL
+3.5.2=Links vazios
+3.5.3=Link com descrição somente no title
+3.5.4=Links que são imagem sem descrição
+3.5.5=Links do tipo clique aqui, leia mais, veja aqui, entre outros:
+3.5.6=Links com descrições diferentes que remetem ao mesmo local
+3.5.7=Links com a mesma descrição que remetem a locais diferentes
+3.5.8=Links que são lidos duas ou mais vezes
+3.5.9=Links com descrição muito longa
+3.5.10=Links que remetem a páginas indisponíveis/inexistentes (links quebrados)
+3.6.1=Imagens sem a declaração do atributo alt
+3.6.2=Imagens com conteúdo sem descrição
+3.6.3=Imagens com descrição igual ao nome do arquivo
+3.6.4=Imagens com descrições comuns
+3.6.5=Imagens diferentes com a mesma descrição
+3.6.6=Imagem com dupla descrição, pois utiliza atributo title com mesmo valor da descrição
+3.7.1=Mapa de imagem sem descrição ou alternativa em texto
+3.8.1=Tabelas sem células associadas
+3.9.1=Tabelas sem título e resumo
+3.9.2=Erros ortográficos 
+3.9.3=Informações confusas 
+3.10.1=Tabelas sem células associadas
+3.11.1=Parágrafos muito extensos
+3.11.2=Presença de parágrafos justificados
+3.11.3=Presença de textos justificados através de folhas de estilo
+3.12.1=Siglas marcadas e sem explicação
+4.1.1=Foram localizados combinações de cor cuja relação de contraste é inferior a 4,5:1
+4.2.1=Quando ocorre o redimensionamento, ocorre perda de funcionalidade
+4.2.2=O sítio não dispÄ±e de nenhum botão que possibilite, de forma nativa, o redimensionamento de texto
+4.2.3=Quando ocorre o redimensionamento, apenas uma parte dos elementos é ampliada
+4.2.4=Quando ocorre o redimensionamento, há inserção de barras de rolagem
+4.2.5=O recurso de redimensionamento de texto não permite que o texto chegue a ser 200% do tamanho original
+4.3.1=não há divisão das áreas de informação e não é possível perceber essa divisão utilizando o leitor de tela
+4.3.2=não há divisão das áreas de informação, mas pode-se ter uma ideia das áreas presentes
+4.4.1=Presença de destaque do foco do elemento ativo
+4.4.2=O foco é visualmente evidente, mas o contraste é muito ruim
+4.4.3=O foco é visualmente evidente em parte dos elementos
+5.1.1=Não fornece alternativa para vídeo
+5.1.2=O vídeo não possui legenda
+5.2.2=Uso de caracteres impróprios
+5.2.1=Fornecer alternativa para áudio(áudio sem alternativa textual)
+5.3.1=não existe audiodescrição e há necessidade de haver
+5.4.1=Fornecer controle de áudio para som(Â¡udio que toca automaticamente em uma página sem opções para pausar)
+5.5.1=Animação é executada automaticamente sem opções para pausar.
+6.1.1=Botão sem descrição
+6.1.2=botão com descrição inadequada
+6.1.3=botão com descrição insuficiente ou descrição pouco objetiva (pode ser melhorada)
+6.2.1=Campo sem label associado
+6.2.2=Campo etiquetado, mas a descrição do label não está apropriada
+6.3.1=Presença do elemento FORM  e atributo tabindex
+6.4.1=Presença do elemento FORM  e nos seus elementos a existência do atributo ONCHANGE, ONBLUR,ONFOCUS, ONFORMCHANGE,  ONFORMINPUT , ONINPUT , ONINVALID , ONRESET , ONSELECT, ONSUBMIT,  ONKEYDOWN , ONKEYPRESS, ONKEYUP, ONCLICK
+6.4.2=Presença do elemento FORM  e nos seus elementos a existência do atributo ONDBLCLICK, ONDRAG, ONDRAGEND, ONDRAGENTER, ONDRAGLEAVE, ONDRAGOVER, ONDRAGSTART, ONDROP, ONMOUSEDOWN, ONMOUSEMOVE, ONMOUSEOUT, ONMOUSEOVER, ONMOUSEUP, ONMOUSEWHEEL, ONSCROLL
+6.4.3=botão que remete automaticamente
+6.5.1=Campo obrigatório informado somente através de cor
+6.5.2=Campo obrigatório que não é informado
+6.5.3=Campos que exigem uma entrada específica, mas não informam como a mesma deve ser
+6.5.4=Campo obrigatório é informado, mas não para o leitor de tela
+6.5.5=Campo obrigatório informado através de símbolos (*)
+6.5.6=Mensagem de preenchimento opcional que não está associada ao campo
+6.6.1=Mensagem de erro inacessível
+6.6.2=não há mensagem de erro
+6.6.3=Após mensagem de erro, o foco não é remetido para o início do formulário ou para primeiro campo com erro
+6.6.4=Mensagem de erro em Alert
+6.6.5=Mensagem de erro confusa
+6.7.1=Existência de formulário e inexistência de agrupamento de campos
+6.7.2=Uso de campo de seleção sem agrupamento
 4.2=Campos agrupados de forma incorreta
-45.1=CAPTCHA sem alternativa em texto
+6.8.1=CAPTCHA sem alternativa em texto
