git-svn-id: https://svn.bento.ifrs.edu.br/default/ASES/ASES%20-%20Web/ASES%20-%20Web/Fontes/avaliador-web@10031 c2178572-b5ca-4887-91d2-9e3a90c7d55b

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -3,11 +3,11 @@
 
 
 1.1.1=Não foram respeitados os Padrões Web HTML
-1.1..2=Não foram respeitados os Padrões Web CSS
-1.1..3=Presença de CSS(s) in-line
-1.1..4=Presença de CSS(s) interno
-1.1..5=Presença de javascript(s) in-line
-1.1..6=Presença de javascript(s) interno
+1.1.2=Não foram respeitados os Padrões Web CSS
+1.1.3=Presença de CSS(s) in-line
+1.1.4=Presença de CSS(s) interno
+1.1.5=Presença de javascript(s) in-line
+1.1.6=Presença de javascript(s) interno
 1.2.1=Presença de tags HTML sem atributo e conteúdo de texto
 1.3.1=Os níveis de título não foram utilizados
 1.3.2=A hierarquia dos níveis de título está incorreta
