Correção de comportamento 1
git-svn-id: https://svn.bento.ifrs.edu.br/default/ASES/ASES%20-%20Web/ASES%20-%20Web/Fontes/avaliador-web@10203 c2178572-b5ca-4887-91d2-9e3a90c7d55b

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -36,7 +36,7 @@
 1.9.2=Há mudança automática no controle do foco do teclado é muito alta
 1.9.3=Há link que remete a um site externo sem avisar no texto do mesmo 
 2.1.1=Há funcionalidade que só funciona pelo mouse
-2.1.2=Presença de evento dblclick no elemento HTML
+2.1.2=Presença de evento dblclick ou ondblclick no elemento HTML
 2.1.3=Presença de eventos associados a elementos não interativos
 2.2.1=Presença do elemento SCRIPT sem o elemento NOSCRIPT
 2.2.2=Presença de elemento OBJECT sem o conteúdo alternativo
