git-svn-id: https://svn.bento.ifrs.edu.br/default/ASES/ASES%20-%20Web/ASES%20-%20Web/Fontes/avaliador-web@10240 c2178572-b5ca-4887-91d2-9e3a90c7d55b

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -31,7 +31,7 @@
 1.6.6=Há· links indicadores, mas estão ocultos de forma que o leitor de tela não os acessa
 1.7.1=Há links adjacentes sem nenhum tipo de separação ou separação por espaços em branco
 1.8.1=Ausência de divisão de áreas, quando do Uso de HTML 5 
-1.8.2=Há links adjacentes separados por símbolos 
+1.8.2=Ausência de divisão de áreas, quando do Uso de LANDMARKS 
 1.9.1=Há link que abre nova página ou aba sem informar ao usuário 
 1.9.2=Há mudança automática no controle do foco do teclado é muito alta
 1.9.3=Há link que remete a um site externo sem avisar no texto do mesmo 
