Correção de conteudo
git-svn-id: https://svn.bento.ifrs.edu.br/default/ASES/ASES%20-%20Web/ASES%20-%20Web/Fontes/avaliador-web@10243 c2178572-b5ca-4887-91d2-9e3a90c7d55b

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -55,7 +55,7 @@
 3.1.3=O título descreve o site, mas não as páginas internas
 3.1.4=O título descreve a página atual, mas não o site
 3.1.5=O título descreve a página, mas pode ser melhorado
-3.2.1=Presença de atributo lang nos elementos da página, além da tag <HTML>
+3.2.1=Presença de atributo lang nos elementos da página, além da tag "HTML"
 3.2.2=Há breadcrumb, mas os itens não estão em forma de link
 3.2.3=Há breadcrumb, mas o mesmo exibe links de páginas não percorridas
 3.2.4=Há breadcrumb, mas não há informação que o identifique, como Ã¬vocÃ está emÃ®
@@ -85,6 +85,7 @@
 3.9.2=Erros ortográficos 
 3.9.3=Informações confusas 
 3.10.1=Tabelas sem células associadas
+3.10.2=Tabelas sem título e resumo
 3.11.1=Parágrafos muito extensos
 3.11.2=Presença de parágrafos justificados
 3.11.3=Presença de textos justificados através de folhas de estilo
