Correção Sessão Conteúdo
git-svn-id: https://svn.bento.ifrs.edu.br/default/ASES/ASES%20-%20Web/ASES%20-%20Web/Fontes/avaliador-web@10262 c2178572-b5ca-4887-91d2-9e3a90c7d55b

--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -101,7 +101,7 @@
 4.4.1=Presença de destaque do foco do elemento ativo
 4.4.2=O foco é visualmente evidente, mas o contraste é muito ruim
 4.4.3=O foco é visualmente evidente em parte dos elementos
-5.1.1=Não fornece alternativa para vídeo
+5.1.1=Presença de vídeo na página
 5.1.2=O vídeo não possui legenda
 5.2.2=Uso de caracteres impróprios
 5.2.1=Fornecer alternativa para áudio(áudio sem alternativa textual)
