--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -104,9 +104,9 @@
 5.1.1=Presença de vídeo na página
 5.1.2=O vídeo não possui legenda
 5.2.2=Uso de caracteres impróprios
-5.2.1=Fornecer alternativa para áudio(áudio sem alternativa textual)
-5.3.1=não existe audiodescrição e há necessidade de haver
-5.4.1=Fornecer controle de áudio para som(Â¡udio que toca automaticamente em uma página sem opções para pausar)
+5.2.1=Presença de áudio na página
+5.3.1=Presença de vídeo na página
+5.4.1=Presença de áudio na página
 5.5.1=Animação é executada automaticamente sem opções para pausar.
 6.1.1=Botão sem descrição
 6.1.2=botão com descrição inadequada
