--- a/src/main/webapp/WEB-INF/criteriosDescriptions.properties
+++ b/src/main/webapp/WEB-INF/criteriosDescriptions.properties
@@ -30,13 +30,8 @@
 1.6.5=Não existem links indicadores de início e fim dos blocos principais
 1.6.6=Há· links indicadores, mas estão ocultos de forma que o leitor de tela não os acessa
 1.7.1=Há links adjacentes sem nenhum tipo de separação ou separação por espaços em branco
-1.8.1=Ausência de divisão de áreas, quando do Uso de HTML 5 <HEADER> 
-1.8.2=Ausência de divisão de áreas, quando do Uso de HTML 5 <NAV>
-1.8.3=Ausência de divisão de áreas, quando do Uso de HTML 5 <SECTION>
-1.8.4=Ausência de divisão de áreas, quando do Uso de HTML 5 <FOOTER>
-1.8.5=Ausência de divisão de áreas, quando do Uso de LANDMARKS banner
-1.8.6=Ausência de divisão de áreas, quando do Uso de LANDMARKS navigation
-1.8.7=Ausência de divisão de áreas, quando do Uso de LANDMARKS main
+1.8.1=Ausência de divisão de áreas, quando do Uso de HTML 5 
+1.8.2=Ausência de divisão de áreas, quando do Uso de LANDMARKS
 1.9.1=Há link que abre nova página ou aba sem informar ao usuário 
 1.9.2=Há mudança automática no controle do foco do teclado é muito alta
 1.9.3=Há link que remete a um site externo sem avisar no texto do mesmo 
