--- a/src/main/webapp/WEB-INF/eselo.properties
+++ b/src/main/webapp/WEB-INF/eselo.properties
@@ -1,1 +1,1 @@
-url=https://sistemas-treinamento.ifbaiano.edu.br/eselo/calcular-nota
+url=https://sistemas-treinamento.ifbaiano.edu.br/intg_ases_selo/calcular-nota
