--- a/src/main/webapp/WEB-INF/eselo.properties
+++ b/src/main/webapp/WEB-INF/eselo.properties
@@ -1,1 +1,2 @@
-url=https://sistemas-treinamento.ifbaiano.edu.br/intg_ases_selo/calcular-nota
+#url=https://sistemas-treinamento.ifbaiano.edu.br/intg_ases_selo/calcular-nota
+url=http://189.9.137.162:8080/eselo/calcular-nota
