Versão corrigida alguns bug's de avaliação

--- a/src/main/webapp/WEB-INF/mail.properties
+++ b/src/main/webapp/WEB-INF/mail.properties
@@ -1,4 +1,4 @@
-prop.email.host = smtp.gmail.com
+prop.email.host = 161.148.21.220
 prop.email.port = 465
-prop.email.authuser = contato.asesweb
-prop.email.authpass = @s3sc@nt@t@#			
+prop.email.authuser = 96409975520
+prop.email.authpass = Erdos_200244		
